2006-11-02  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/highlighting.c, data/filetypes.perl, data/filetypes.pascal,
   data/filetypes.sh, data/filetypes.makefile, data/filetypes.ruby,
   data/filetypes.tcl:
   Make all remaining 0xff0000 comment styles darker using a common
   default comment style.
   Add some other generic styles (used only by C-like filetypes for
   now).


2006-11-01  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/search.c: Changed tooltip of checkbox "Close dialog" to be more
                 descriptive.
 * src/keybindings.c: Changed keybinding for Print to Ctrl+P.
 * scintilla/LexBash.cxx: Fixed wrong detection of some words.


2006-11-01  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/document.c: Prevent possible invalid memory read.
 * src/ui_utils.h, src/search.c, src/search.h, src/ui_utils.c,
   src/callbacks.c:
   Add Find Previous, Find All in File/Session buttons to the Find
   dialog.
   Move Find Usage code from on_find_usage1_activate to search.c.
   Add ui_button_new_with_image(), ui_hbutton_box_copy_layout().
 * src/utils.c: Prevent end of line char showing for current function.
 * src/search.c: Update Save All state after Replace in Session.
 * src/callbacks.c: Update Undo items when switching notebook pages.


2006-10-30  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/sci_cb.c: Add extra indentation for Python after a colon.
 * tagmanager/latex.c, src/treeviews.c:
   Removed "begin" section in symbol list and sort it at environment.


2006-10-29  Enrico Tröger  <enrico.troeger@uvena.de>

 * geany.glade, src/interface.c, src/prefs.c, src/geany.h,
   src/keyfile.c, src/ui_utils.c, src/main.c:
   Added an Apply button to preferences dialog.
   New setting to show/hide the Quit toolbar item.
   New setting to show/hide notebook tabs.
 * src/document.c, src/treeviews.c, src/treeviews.h:
   Colour also the open files list items according to their changed
   state.